--- a/CCM_New/Client/Pages/Claims/NewClaimComponent.razor
+++ b/CCM_New/Client/Pages/Claims/NewClaimComponent.razor
@@ -553,7 +553,7 @@
     //    //  await LoadDataForDN();
     //    StateHasChanged();
     //}
-
+    // first commit 
 
     async Task EdycjaComplain(TblDeliveries DuComplain)
     {
