--- a/CCM_New/Client/Pages/Claims/NewClaimComponent.razor
+++ b/CCM_New/Client/Pages/Claims/NewClaimComponent.razor
@@ -554,7 +554,7 @@
     //    StateHasChanged();
     //}
     // first commit 
-
+    // second commit 
     async Task EdycjaComplain(TblDeliveries DuComplain)
     {
         //await AcrdnObj.EnableItem(0, true);
