--- a/CCM_New/Client/Pages/Claims/NewClaimComponent.razor
+++ b/CCM_New/Client/Pages/Claims/NewClaimComponent.razor
@@ -968,12 +968,12 @@
             // dl.ComplaintQty = dl.ComplaintQty;
             dl.SalesOrder = "Sort";
             dl.SalesOrderLine = "SL";
-            dl.Rootcause = 0;
-            dl.LiableParty = 0;
+            dl.Rootcause = null;
+            dl.LiableParty = null;
             dl.TotalComplaintValueCurrentCurrency = 0;
             dl.CurrencyComplaintValue = "";
-            dl.FinalRootcause = 0;
-            dl.FinalLiableParty = 0;
+            dl.FinalRootcause = null;
+            dl.FinalLiableParty = null;
             dl.FinalRcRemarks = "";
             dl.FinalRcRemarksComplaintsTeam = "";
             dl.SerialNumbers = "";
